# AMDMIGraphX

./: Dockerfile
dyn_model_test/: CMakeLists.txt  dyn_model_test.cpp
examples/diffusion/python_stable_diffusion_21/: requirements.txt
src/: fuse_reduce.cpp  propagate_constant.cpp  quantize_fp16.cpp  shape.cpp  split_single_dyn_dim.cpp
src/driver/: argument_parser.hpp  verify.cpp  verify.hpp
src/include/migraphx/: shape.hpp
src/include/migraphx/op/: nonzero.hpp  quant_dot.hpp  quantizelinear.hpp  round.hpp  topk.hpp
src/onnx/: onnx_parser.cpp  parse_matmul.cpp  parse_softmax.cpp
src/py/: migraphx_py.cpp
src/targets/gpu/: fuse_ops.cpp  gemm_impl.cpp  lowering.cpp  prefuse_ops.cpp  target.cpp
src/targets/gpu/include/migraphx/gpu/: gemm.hpp  gemm_impl.hpp
test/: child.cpp  parent_process.cpp  ref_ops_test.cpp
test/onnx/: gen_onnx.py  matmulinteger_unsigned_test.onnx  onnx_test.cpp  verify_onnx.cpp
test/py/: onnx_backend_test.py  test_shape.py
tools/: all_onnx_ops.txt  check_onnx_op_support.py  dyn_test_runner.py  generate_models.py  img_data_to_pb.py  ort_resnet50_run.py
tools/accuracy/: accuracy_checker.py
